--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,681 @@
+html, body {
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+}
 
-/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MifQ== */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  border: 0;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+svg {
+  fill: currentColor;
+}
+
+img {
+  margin: 0;
+  padding: 0;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  transition-property: color;
+  transition-duration: 0.5s;
+  transition-timing-function: linear;
+}
+
+.pillar-content__title, .footer__links, .footer__notice, .footer__social-media {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .pillar-content__title, .footer__links, .footer__notice, .footer__social-media {
+    margin-bottom: 4rem;
+  }
+}
+
+.contents-image__contents__title, .footer__links__title {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .contents-image__contents__title, .footer__links__title {
+    margin-bottom: 2rem;
+  }
+}
+
+.body-content {
+  font-family: sans-serif;
+  line-height: 1.7;
+}
+.body-content strong {
+  font-weight: 600;
+}
+.body-content h1, .body-content h2, .body-content h3, .body-content h4, .body-content h5 {
+  color: #000000;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 4rem;
+  font-weight: 600;
+}
+.body-content p, .body-content ol, .body-content ul {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 4rem;
+}
+.body-content ul {
+  padding-left: 1em;
+  box-sizing: border-box;
+}
+.body-content li {
+  width: calc(100% - 1em);
+  list-style: none;
+  position: relative;
+}
+.body-content li:before {
+  content: '\25A0';
+  color: #999999;
+  margin-right: .5em;
+}
+.body-content > *:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.panel {
+  width: 100vw;
+  background-color: #CCCCCC;
+}
+
+.container {
+  width: 100vw;
+  margin: 0 auto;
+  max-width: 1400px;
+  padding: 0 5vw;
+}
+
+html {
+  font-family: sans-serif;
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: #000000;
+}
+@media screen and (min-width: 560px) {
+  body {
+    font-size: 1.8rem;
+  }
+}
+
+.header {
+  position: fixed;
+  height: 80px;
+}
+@media screen and (min-width: 560px) {
+  .header {
+    height: 80px;
+  }
+}
+
+.main {
+  position: relative;
+  padding-top: 80px;
+}
+@media screen and (min-width: 560px) {
+  .main {
+    padding-top: 80px;
+  }
+}
+
+input, textarea, select, button {
+  font-size: inherit;
+}
+
+p, ul, ol {
+  padding: 0;
+  margin: 0;
+  line-height: 1.7;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+::selection {
+  background: gold;
+}
+
+h1, h2, h3, h4, h5 {
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 0;
+  padding: 0;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+.nobreak {
+  white-space: nowrap;
+}
+
+.header {
+  position: fixed;
+  background-color: #ffffff;
+  width: 100%;
+  z-index: 10;
+}
+.header__inner {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+.header__logo-lockup {
+  display: flex;
+  align-items: center;
+}
+.header__logo-lockup__image {
+  width: 60px;
+  height: 60px;
+}
+.header__logo-lockup__title {
+  margin-left: 1em;
+  font-weight: 600;
+}
+.header__trigger {
+  color: #000000;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+@media screen and (min-width: 960px) {
+  .header__trigger {
+    display: none;
+  }
+}
+.header__trigger__icon {
+  width: 20px;
+  height: 20px;
+}
+.header__trigger__label {
+  font-size: 0.8em;
+}
+.header__menu {
+  display: none;
+}
+@media screen and (min-width: 960px) {
+  .header__menu {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+}
+.header__menu__item {
+  margin-left: 2em;
+}
+
+/*
+-- logo-lockup
+-- header-nav-menu
+*/
+.mobile-menu {
+  display: block;
+  background-color: #666666;
+  color: #ffffff;
+  height: auto;
+  width: 100%;
+  position: absolute;
+  top: 80px;
+  right: 0;
+  transform: translateX(100%);
+  border-top: rgba(0, 0, 0, 0.2) solid 1px;
+  opacity: 0;
+  transition-property: transform;
+  transition-duration: 0.2s;
+  transition-timing-function: cubic-bezier(0.2, 0.9, 0.3, 1.3);
+}
+.mobile-menu.open {
+  transition-property: transform;
+  transition-duration: 0.2s;
+  transition-timing-function: cubic-bezier(0.2, 0.9, 0.3, 1.3);
+  transform: translateX(0);
+  opacity: 1;
+}
+.mobile-menu .close {
+  transition-property: transform;
+  transition-duration: 0.2s;
+  transition-timing-function: cubic-bezier(0.2, 0.9, 0.3, 1.3);
+  transform: translateX(100%);
+  opacity: 0;
+}
+.mobile-menu__group:last-of-type {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+.mobile-menu__group__title {
+  font-size: 0.8em;
+  text-transform: uppercase;
+  padding: 2rem;
+}
+.mobile-menu__item {
+  display: block;
+  padding: 2rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+.mobile-menu__item:first-of-type {
+  border-top: 0;
+}
+@media screen and (min-width: 960px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.post-meta {
+  display: flex;
+  align-items: center;
+  font-size: 0.8em;
+}
+.post-meta__item {
+  display: block;
+  padding: 0 .5em;
+}
+.post-meta__item:first-of-type {
+  padding-left: 0;
+}
+
+.progress-indicator {
+  background-color: #999999;
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  top: 80px;
+  z-index: 100;
+}
+
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 5px;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 5px;
+  background: #666666;
+  width: 0%;
+}
+
+.contents-image__inner {
+  background-color: #ffffff;
+}
+@media screen and (min-width: 960px) {
+  .contents-image__inner {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 1.5rem;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.contents-image__contents {
+  padding: 3rem;
+}
+.contents-image__contents__title {
+  font-weight: 600;
+  font-weight: 600;
+  font-size: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .contents-image__contents__title {
+    font-size: calc(2rem + 50%);
+  }
+}
+.contents-image__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cta .button {
+  margin-bottom: 2rem;
+}
+
+.page-nav {
+  position: fixed;
+  top: calc(80px + 5px);
+  width: 100%;
+  background-color: #ffffff;
+  display: block;
+  transition-property: opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+}
+.page-nav.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+.page-nav.visible {
+  visibility: visible;
+  opacity: 1;
+}
+.page-nav__inner {
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+}
+.page-nav__button {
+  cursor: pointer;
+  height: 80px;
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 3rem;
+}
+.page-nav__button__icon {
+  color: #000000;
+  width: 10px;
+  height: 10px;
+  margin: 1rem;
+}
+.page-nav__dropdown {
+  position: absolute;
+  top: 80px;
+  background-color: #ffffff;
+  padding: 3rem;
+  transition-property: opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+}
+.page-nav__dropdown.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+.page-nav__dropdown.visible {
+  visibility: visible;
+  opacity: 1;
+}
+.page-nav__backtop {
+  cursor: pointer;
+  height: 80px;
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 3rem;
+  margin-left: auto;
+}
+.page-nav__backtop__icon {
+  transform: rotate(180deg);
+  color: #000000;
+  width: 10px;
+  height: 10px;
+  margin: 1rem;
+}
+
+.breadcrumb {
+  display: flex;
+  align-items: center;
+  font-size: 0.8em;
+}
+.breadcrumb__item {
+  display: block;
+  padding: 0 1em;
+}
+.breadcrumb__item:first-of-type {
+  padding-left: 0;
+}
+.breadcrumb__arrow {
+  transform: rotate(-90deg);
+  width: 10px;
+  height: 10px;
+}
+
+.hero-pillar {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+@media screen and (min-width: 960px) {
+  .hero-pillar {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: calc(100vh - 80px);
+    min-height: 900px;
+    max-height: 1100px;
+  }
+}
+.hero-pillar__breadcrumb {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .hero-pillar__breadcrumb {
+    margin-bottom: 2rem;
+  }
+}
+.hero-pillar__title {
+  margin-bottom: 2rem;
+  margin-bottom: 2rem;
+  font-size: 4rem;
+  font-weight: 600;
+}
+@media screen and (min-width: 560px) {
+  .hero-pillar__title {
+    font-size: 6rem;
+  }
+}
+@media screen and (min-width: 960px) {
+  .hero-pillar__title {
+    font-size: 8rem;
+  }
+}
+.hero-pillar__post-meta {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .hero-pillar__post-meta {
+    margin-bottom: 4rem;
+  }
+}
+.hero-pillar__intro {
+  margin-bottom: 2rem;
+  width: 100%;
+  max-width: 1000px;
+}
+@media screen and (min-width: 560px) {
+  .hero-pillar__intro {
+    margin-bottom: 2rem;
+  }
+}
+.hero-pillar__breadcrumb {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .hero-pillar__breadcrumb {
+    margin-bottom: 2rem;
+  }
+}
+.hero-pillar__contents-image {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .hero-pillar__contents-image {
+    margin-bottom: 2rem;
+  }
+}
+.hero-pillar__cta .button {
+  margin-bottom: 2rem;
+}
+
+.button {
+  font-weight: 600;
+  border-radius: 3px;
+  padding: 1em;
+  display: inline-block;
+  width: auto;
+  text-align: center;
+  position: relative;
+  text-decoration: none !important;
+  background-color: #f9f9f9;
+  color: #666666;
+}
+@media screen and (min-width: 560px) {
+  .button {
+    padding: 1.3em 1em;
+  }
+}
+.button:hover {
+  color: #999999;
+  background: #f2f2f2;
+}
+.button:active {
+  color: #999999;
+  background: #f2f2f2;
+}
+.button--alt {
+  background-color: #666666;
+  color: #ffffff;
+}
+.button--alt:hover {
+  color: #ffffff;
+  background: #8c8c8c;
+}
+.button--alt:active {
+  color: #ffffff;
+  background: #8c8c8c;
+}
+.button--outline {
+  background-color: transparent;
+  color: #666666;
+  border: #666666 1px solid;
+}
+.button--outline:hover {
+  color: #ffffff;
+  background: #595959;
+}
+.button--outline:active {
+  color: #ffffff;
+  background: #595959;
+}
+.button__inner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.body-content p, .body-content ol, .body-content ul {
+  max-width: 1000px;
+}
+.body-content img {
+  margin-bottom: 4rem;
+}
+
+.pillar-content__section {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+@media screen and (min-width: 560px) {
+  .pillar-content__section {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+}
+.pillar-content__section:nth-of-type(odd) {
+  background-color: #E6E6E6;
+}
+.pillar-content__title {
+  font-weight: 600;
+  font-size: 3rem;
+}
+@media screen and (min-width: 560px) {
+  .pillar-content__title {
+    font-size: calc(3rem + 50%);
+  }
+}
+
+.footer {
+  background-color: #333333;
+  color: #ffffff;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.footer__row {
+  width: 100%;
+  padding-top: 2rem;
+}
+@media screen and (min-width: 960px) {
+  .footer__row {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 1.5rem;
+    grid-template-columns: 2fr 1fr;
+  }
+}
+@media screen and (min-width: 560px) {
+  .footer__row {
+    padding-top: 4rem;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+.footer__row:last-of-type {
+  border-top: 1px solid #ffffff;
+}
+.footer__links {
+  display: flex;
+  flex-direction: column;
+}
+.footer__links__title {
+  font-size: 0.8em;
+  text-transform: uppercase;
+}
+.footer__social-media {
+  color: #ffffff;
+}
+.footer__social-media__item {
+  cursor: pointer;
+  margin-left: 1rem;
+  color: #ffffff;
+}
+.footer__social-media__icon {
+  width: 18px;
+  height: 18px;
+}
+
+/*# sourceMappingURL=style.css.map */
