--- a/css/input/main.scss
+++ b/css/input/main.scss
@@ -9,6 +9,9 @@
 @import '_page-nav';
 @import '_breadcrumb';
 @import '_hero-pillar';
+@import '_hero-post';
+@import '_guide-feature';
+@import '_article';
 @import '_buttons';
 @import '_body-content';
 @import '_pillar-section';
