--- a/css/input/_buttons.scss
+++ b/css/input/_buttons.scss
@@ -10,17 +10,19 @@
 }
 
 @mixin btn-state($color, $textcolor){
+    @include transition(background-color);
     &:hover {
         color:$textcolor;
-        background: darken($color, 5);
+        background-color: darken($color, 5);
     }
     &:active {
         color:$textcolor;
-        background: darken($color, 5);
+        background-color: darken($color, 5);
     }
 };
 
 .button{
+    cursor:pointer;
     font-weight:$bold;
     border-radius:3px;
     padding:1em;
@@ -29,16 +31,16 @@
     text-align:center;
     position:relative;
     text-decoration:none!important;
+    background-color:$color-primary;
+    color:$white;
+    @include btn-state($color-primary, $white);
     @include break(small){
-        padding:1.3em 1em;
+        padding:1em 1.3em;
     }
-    background-color:$off-white;
-    color:$color-primary;
-    @include btn-state($white, $color-secondary);
     &--alt{
-        background-color:$color-primary;
-        color:$white;
-        @include btn-state($color-secondary, $white);
+        background-color:$white;
+        color:$color-primary;
+        @include btn-state($white, $color-secondary);
     }
     &--outline{
         background-color:transparent;
@@ -51,6 +53,12 @@
         width:100%;
         height:100%;
         @include align-center;
+    }
+    &--small{
+        @include text-tiny;
+        @include break(small){
+            padding:.8em 1em;
+        }
     }
 }
 
