--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,24 @@ a {
   margin-bottom: 4rem;
   font-weight: 600;
 }
+.body-content h2 {
+  font-weight: 600;
+  font-size: 3rem;
+}
+@media screen and (min-width: 560px) {
+  .body-content h2 {
+    font-size: calc(3rem + 50%);
+  }
+}
+.body-content h3 {
+  font-weight: 600;
+  font-size: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .body-content h3 {
+    font-size: calc(2rem + 50%);
+  }
+}
 .body-content p, .body-content ol, .body-content ul {
   padding: 0;
   margin: 0;
@@ -104,6 +122,56 @@ a {
   margin: 0 auto;
   max-width: 1400px;
   padding: 0 5vw;
+}
+
+@media screen and (min-width: 960px) {
+  .grid--2 {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 3rem;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width: 960px) {
+  .grid--1-2 {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 3rem;
+    grid-template-columns: 2fr 1fr;
+  }
+}
+@media screen and (min-width: 960px) {
+  .grid--3 {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 3rem;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .grid-tight--2 {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 1.5rem;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width: 960px) {
+  .grid-tight--1-2 {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 1.5rem;
+    grid-template-columns: 2fr 1fr;
+  }
+}
+@media screen and (min-width: 960px) {
+  .grid-tight--3 {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 1.5rem;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 html {
@@ -259,19 +327,20 @@ h1, h2, h3, h4, h5 {
   opacity: 0;
   transition-property: transform;
   transition-duration: 0.2s;
-  transition-timing-function: cubic-bezier(0.2, 0.9, 0.3, 1.3);
+  transition-timing-function: linear;
+  height: calc(100vh - 80px);
 }
 .mobile-menu.open {
   transition-property: transform;
   transition-duration: 0.2s;
-  transition-timing-function: cubic-bezier(0.2, 0.9, 0.3, 1.3);
+  transition-timing-function: linear;
   transform: translateX(0);
   opacity: 1;
 }
 .mobile-menu .close {
   transition-property: transform;
   transition-duration: 0.2s;
-  transition-timing-function: cubic-bezier(0.2, 0.9, 0.3, 1.3);
+  transition-timing-function: linear;
   transform: translateX(100%);
   opacity: 0;
 }
@@ -389,20 +458,24 @@ h1, h2, h3, h4, h5 {
   opacity: 1;
 }
 .page-nav__inner {
-  height: 80px;
+  height: 60px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   position: relative;
 }
+@media screen and (min-width: 560px) {
+  .page-nav__inner {
+    height: 80px;
+  }
+}
 .page-nav__button {
   cursor: pointer;
-  height: 80px;
+  height: 100%;
   width: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 3rem;
 }
 .page-nav__button__icon {
   color: #000000;
@@ -412,12 +485,20 @@ h1, h2, h3, h4, h5 {
 }
 .page-nav__dropdown {
   position: absolute;
-  top: 80px;
+  top: 60px;
+  left: 0;
+  width: 100%;
   background-color: #ffffff;
   padding: 3rem;
+  padding: 5vw;
   transition-property: opacity;
   transition-duration: 0.2s;
   transition-timing-function: linear;
+}
+@media screen and (min-width: 560px) {
+  .page-nav__dropdown {
+    top: 80px;
+  }
 }
 .page-nav__dropdown.hidden {
   visibility: hidden;
@@ -429,12 +510,11 @@ h1, h2, h3, h4, h5 {
 }
 .page-nav__backtop {
   cursor: pointer;
-  height: 80px;
+  height: 100%;
   width: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 3rem;
   margin-left: auto;
 }
 .page-nav__backtop__icon {
@@ -541,7 +621,167 @@ h1, h2, h3, h4, h5 {
   margin-bottom: 2rem;
 }
 
+.hero-post {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+@media screen and (min-width: 960px) {
+  .hero-post {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: calc(100vh - 80px);
+    min-height: 900px;
+    max-height: 1100px;
+  }
+}
+.hero-post__breadcrumb {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .hero-post__breadcrumb {
+    margin-bottom: 2rem;
+  }
+}
+.hero-post__title {
+  margin-bottom: 2rem;
+  margin-bottom: 2rem;
+  font-size: 4rem;
+  font-weight: 600;
+}
+@media screen and (min-width: 560px) {
+  .hero-post__title {
+    font-size: 6rem;
+  }
+}
+@media screen and (min-width: 960px) {
+  .hero-post__title {
+    font-size: 8rem;
+  }
+}
+.hero-post__post-meta {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .hero-post__post-meta {
+    margin-bottom: 4rem;
+  }
+}
+.hero-post__intro {
+  margin-bottom: 2rem;
+  width: 100%;
+  max-width: 1000px;
+}
+@media screen and (min-width: 560px) {
+  .hero-post__intro {
+    margin-bottom: 2rem;
+  }
+}
+.hero-post__breadcrumb {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .hero-post__breadcrumb {
+    margin-bottom: 2rem;
+  }
+}
+.hero-post__image {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 560px) {
+  .hero-post__image {
+    margin-bottom: 2rem;
+  }
+}
+.hero-post__cta .button {
+  margin-bottom: 2rem;
+}
+
+.guide-feature-horiz {
+  background-color: #ffffff;
+  padding: 2rem;
+  font-size: 0.8em;
+}
+@media screen and (min-width: 560px) {
+  .guide-feature-horiz__inner {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 2rem;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.guide-feature-horiz__tagline {
+  text-transform: uppercase;
+}
+.guide-feature-horiz__title {
+  margin-bottom: 2rem;
+}
+.guide-feature-horiz__title__tagline {
+  text-transform: uppercase;
+  display: block;
+  margin-bottom: 2rem;
+  font-size: .8em;
+}
+.guide-feature-horiz__title__title {
+  font-weight: 600;
+}
+
+.guide-feature-panel {
+  background-color: #ffffff;
+  padding: 6rem 0;
+}
+@media screen and (min-width: 560px) {
+  .guide-feature-panel__inner {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 4rem;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.guide-feature-panel__tagline {
+  text-transform: uppercase;
+}
+.guide-feature-panel__title {
+  margin-bottom: 4rem;
+}
+.guide-feature-panel__title__tagline {
+  text-transform: uppercase;
+  display: block;
+  margin-bottom: 2rem;
+  font-size: 0.8em;
+}
+.guide-feature-panel__title__title {
+  font-weight: 600;
+  font-weight: 600;
+  font-size: 3rem;
+}
+@media screen and (min-width: 560px) {
+  .guide-feature-panel__title__title {
+    font-size: calc(3rem + 50%);
+  }
+}
+.guide-feature-panel__intro {
+  margin-bottom: 4rem;
+}
+
+.article__content {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+@media screen and (min-width: 560px) {
+  .article__content {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+}
+.article__content:nth-of-type(odd) {
+  background-color: #E6E6E6;
+}
+
 .button {
+  cursor: pointer;
   font-weight: 600;
   border-radius: 3px;
   padding: 1em;
@@ -550,46 +790,55 @@ h1, h2, h3, h4, h5 {
   text-align: center;
   position: relative;
   text-decoration: none !important;
-  background-color: #f9f9f9;
-  color: #666666;
+  background-color: #666666;
+  color: #ffffff;
+  transition-property: background-color;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+}
+.button:hover {
+  color: #ffffff;
+  background-color: #595959;
+}
+.button:active {
+  color: #ffffff;
+  background-color: #595959;
 }
 @media screen and (min-width: 560px) {
   .button {
-    padding: 1.3em 1em;
+    padding: 1em 1.3em;
   }
 }
-.button:hover {
-  color: #999999;
-  background: #f2f2f2;
-}
-.button:active {
-  color: #999999;
-  background: #f2f2f2;
-}
 .button--alt {
-  background-color: #666666;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #666666;
+  transition-property: background-color;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
 }
 .button--alt:hover {
-  color: #ffffff;
-  background: #8c8c8c;
+  color: #999999;
+  background-color: #f2f2f2;
 }
 .button--alt:active {
-  color: #ffffff;
-  background: #8c8c8c;
+  color: #999999;
+  background-color: #f2f2f2;
 }
 .button--outline {
   background-color: transparent;
   color: #666666;
   border: #666666 1px solid;
+  transition-property: background-color;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
 }
 .button--outline:hover {
   color: #ffffff;
-  background: #595959;
+  background-color: #595959;
 }
 .button--outline:active {
   color: #ffffff;
-  background: #595959;
+  background-color: #595959;
 }
 .button__inner {
   width: 100%;
@@ -597,6 +846,14 @@ h1, h2, h3, h4, h5 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.button--small {
+  font-size: 0.8em;
+}
+@media screen and (min-width: 560px) {
+  .button--small {
+    padding: .8em 1em;
+  }
 }
 
 .body-content p, .body-content ol, .body-content ul {
@@ -639,7 +896,12 @@ h1, h2, h3, h4, h5 {
   width: 100%;
   padding-top: 2rem;
 }
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 560px) {
+  .footer__row {
+    padding-top: 4rem;
+  }
+}
+@media screen and (min-width: 560px) and (min-width: 960px) {
   .footer__row {
     display: grid;
     grid-auto-rows: auto;
@@ -647,13 +909,7 @@ h1, h2, h3, h4, h5 {
     grid-template-columns: 2fr 1fr;
   }
 }
-@media screen and (min-width: 560px) {
-  .footer__row {
-    padding-top: 4rem;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-}
+
 .footer__row:last-of-type {
   border-top: 1px solid #ffffff;
 }
